add first questions (two) to domain_two_questions_1-10.html

--- a/html/domain_two_questions_1-10.html
+++ b/html/domain_two_questions_1-10.html
@@ -74,8 +74,21 @@
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
+    let x = 10;
+
+    x = "dog";
+
+    console.log(x);
+ 
+ Q: Which of the following statements is correct?
+ 
+ A: 10 is written to the console
+ 
+ B: dog is written to the console
+ 
+ C: 0 is written to the console
+ 
+ D: A syntax error is reported in the console</pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -83,11 +96,9 @@ INSERT CODE
                     <details open><!--Details CONSOLE -->
                         <summary class="details-console-summary">[JavaScript Inserts]</summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
+dog</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
+dog</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
                 </article>
 
@@ -97,8 +108,26 @@ INSERT CONSOLE OUTPUT (wide view)
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
+    let a = 10.50
+    let b = 180
+    alert('a ' + typeof (a) + ' b ' + typeof (b));
+ 
+ Q: Which of the following statements is correct?
+ 
+ A: a float b int is displayed in 
+    an alert message box
+ 
+ B: a undefined b undefined is displayed in an 
+    alert message box
+ 
+ C: a float b number is displayed in 
+    an alert message box
+ 
+ D: a number b number is displayed in 
+    an alert message box
+ 
+ E: Nothing is displayed in an alert message box, 
+    because of syntax error(s) in the script </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -106,11 +135,9 @@ INSERT CODE
                     <details open><!--Details CONSOLE -->
                         <summary class="details-console-summary">[JavaScript Inserts]</summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
+a number b number</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
+a number b number</pre><!-- wide-view -->
                         <!--ususally inserted before details-console end tag-->
                         <dl class="details-dl">
                             <dt>Note</dt>
