update diagram in bom.html

--- a/html/bom.html
+++ b/html/bom.html
@@ -68,84 +68,43 @@
                         repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
                     </p>
                 </article>
-
                 <article>
-                    <h1 class="count">Code Example</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores culpa quasi doloremque, ab
-                        iusto
-                        totam cupiditate. Mollitia voluptatem assumenda voluptatibus?
-                    </p>
+                    <h1 class="count">Diagram</h1>
 
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
+                    <pre class="details-code-aclass">
+                &rarr; .document   &rarr; .location(2)
+                    .doctype
+                    .charset
+window
+  .innerHeight
+  .innerWidth
+  .outerHeight
+  .outerWidth 
+  .open
+  .name
+  .opener
+  .localstorage
+                &rarr; .history
+                    .length
 
-#include &lt;stdio.h&gt;
-        
-int main()
-  {
-    printf("Hello world\n");
-  }</pre><!-- code-content -->
-                    </details><!--details CODE-->
+                &rarr; .nagivator
+                    .appCodeName
+                    .appName
+                    .appVersion
+                 
+                &rarr; .screen
+                    .height
+                    .width
+                    .availWidth
+                    .availHeight
 
-                    <br class="small-view">
-                    <br class="wide-view">
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-console-aclass small-view">
-
-clang helloworld.c -o 
-    zhelloworld.o
-
-./helloworld.o
-
-// Hello world
-                            </pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-
-clang helloworld.c -o helloworld.o
-
-./helloworld.o
-
-// Hello world
-                            </pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-                </article>
-
-                <article>
-                    <h1 class="count">Code Example</h1>
-                    <details open><!--details CODE-->
-                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
-                        <pre class="details-code-aclass">
-INSERT CODE
-  </pre><!-- code-content -->
-                    </details><!--details CODE-->
-
-                    <br class="small-view">
-                    <br class="wide-view">
-
-                    <details open><!--Details CONSOLE -->
-                        <summary class="details-console-summary">
-                            [JavaScript Inserts]
-                        </summary>
-                        <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
-                        <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
-                    </details><!--details CONSOLE -->
-
-                </article>
-
-                <article>
-                    <h1 class="count">Notes</h1>
-
-                    <ol>
-                        <li>I am an item</li>
-                    </ol>
-
+                &rarr; .location(1)
+                    .host
+                    .hostname
+                    .href
+                    .port
+                    .pathname
+                </pre><!-- code-content -->
                 </article>
 
                 <article>
@@ -154,11 +113,11 @@ INSERT CONSOLE OUTPUT (wide view)
                         <summary class="details-refs-summary">[JavaScript Inserts]</summary>
                         <div class="ref-container details-refs-aclass">
                             <div class="ref">
-                                <a href="https://www.google.ie">Google</a>
+                                <a href="https://developer.mozilla.org/en-US/docs/Web/API/Window">MDN: Window</a>
                             </div>
 
                             <div class="ref">
-                                <a href="https://www.google.ie">Google</a>
+                                <a href="../pdfs/frisbie_2019_bom.pdf">BOM (pdf)</a>
                             </div>
 
                         </div>
