--- a/html/try_catch.html
+++ b/html/try_catch.html
@@ -14,6 +14,14 @@
 
     <style>
         @import url("../css/counters.css");
+
+        ol {
+            padding-left: 10%;
+        }
+
+        ol ol {
+            padding-left: 5%;
+        }
     </style>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,30 +71,124 @@
                 <article>
                     <noscript><span>This Web Site requires JavaScript!</span></noscript>
                     <h1 class="count">Introduction</h1>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, suscipit odio? Obcaecati
-                        repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
-                    </p>
+                    <ol>
+                        <li>The try...catch statement is comprised of
+                            <ol>
+                                <li>a try block
+                                <li>either a catch block <em>or</em> a finally block
+                                <li>both a catch block <em>and</em> a finally block
+                            </ol>
+                        <li>
+                            The code in
+                            the <strong>try block</strong> is executed first, and if it throws an exception, the code in
+                            the <strong>catch block</strong> will be executed
+                        <li>
+                            The code in the finally block will always be executed before control flow exits the entire
+                            construct
+                        <li>
+                            This gives us three forms for the try statement:
+                            <ol>
+                                <li><code>try...catch</code>
+                                <li><code>try...finally</code>
+                                <li><code>try...catch...finally</code>
+                            </ol>
+                        <li>
+                            Unlike other constructs such as if or for, the try, catch, and finally blocks must be
+                            blocks, instead of single
+                            statements
+                    </ol>
                 </article>
+                <article>
+                    <h1 class="count">catch block</h1>
+                    <ol>
+                        <li>
+                            A catch block contains statements that specify what to do if an exception is thrown in the
+                            try block
+                        <li>
+                            If any statement
+                            within the try block (or in a function called from within the try block) throws an
+                            exception, control is immediately
+                            shifted to the catch block
+                        <li>
+                            If no exception is thrown in the try block, the catch block is skipped
+                        <li>
+                            You can nest one or more try statements. If an inner try statement does not have a catch
+                            block, the enclosing try
+                            statement's catch block is used instead
+                        <li>
+                            When an exception is thrown in the try block, exceptionVar (i.e., the e in catch (e)) holds
+                            the exception value
+                        <li>
+                            You can
+                            use this binding to get information about the exception that was thrown. This binding is
+                            only available in the catch
+                            block's scope
+                        <li>
+                            If you don't need the exception value, you can omit it along with the enclosing parentheses
+                            <!--herey-->
+
+                            <pre class="details-code-aclass">
+try {
+    ...
+} catch {
+    return false;
+} 
+</pre><!-- code-content -->
+                    </ol>
+                </article>
+                <article>
+                    <h1 class="count">finally block</h1>
+                    <ol>
+                        <li>
+                            The finally block contains statements to execute after the try block and catch block(s)
+                            execute, but before the
+                            statements following the try...catch...finally block
+
+                        <li>
+                            Control flow will always enter the finally block, which can
+                            proceed in one of the following ways:
+                            <ol>
+                                <li>
+                                    Immediately after the try block finishes execution normally (and no exceptions were
+                                    thrown)
+                                <li>
+                                    Immediately after the catch block finishes execution normally
+                                <li>
+                                    Immediately <strong>BEFORE</strong> the execution of a control-flow statement
+                                    (return, throw, break, continue) in the try block or catch
+                                    block that would exit the block
+                            </ol>
+                    </ol>
+                </article>
+
+                <!-- <article>
+                    <h1 class="count">finally block</h1>
+                    <ol>
+
+                    </ol>
+                </article> -->
 
                 <article>
                     <h1 class="count">Code Example</h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores culpa quasi doloremque, ab
-                        iusto
-                        totam cupiditate. Mollitia voluptatem assumenda voluptatibus?
-                    </p>
 
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-
-#include &lt;stdio.h&gt;
-        
-int main()
-  {
-    printf("Hello world\n");
-  }</pre><!-- code-content -->
+try {
+    try {
+        throw new Error('A funny error');
+        console.log('try')
+    } catch (err) {
+        throw new Error('A catchy error');
+        console.log('catch')
+    } finally {
+        console.log("finally")
+    }
+} catch (err) {
+    console.log("Oops! %s:%s",
+                 err.name, 
+                 err.message);
+}</pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -94,22 +196,11 @@ int main()
                     <details open><!--Details CONSOLE -->
                         <summary class="details-console-summary">[JavaScript Inserts]</summary>
                         <pre class="details-console-aclass small-view">
-
-clang helloworld.c -o 
-    zhelloworld.o
-
-./helloworld.o
-
-// Hello world
-                            </pre><!-- small-view -->
+finally
+Oops! Error:A catchy error</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-
-clang helloworld.c -o helloworld.o
-
-./helloworld.o
-
-// Hello world
-                            </pre><!-- wide-view -->
+finally
+Oops! Error:A catchy error</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
                 </article>
 
