modified ref in arrow_functions.html

--- a/html/arrow_functions.html
+++ b/html/arrow_functions.html
@@ -134,7 +134,8 @@ INSERT CONSOLE OUTPUT (wide view)
                         <summary class="details-refs-summary">[JavaScript Inserts]</summary>
                         <div class="ref-container details-refs-aclass">
                             <div class="ref">
-                                <a href="https://www.google.ie">Google</a>
+                                <a
+                                    href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/try...catch">Google</a>
                             </div>
 
                             <div class="ref">
