add two error examples to errors_quiz.html

--- a/html/errors_quiz.html
+++ b/html/errors_quiz.html
@@ -382,7 +382,7 @@ function myfn() {
 1) Reference Error
 2) Syntax Errror
 3) Type Error
-4) No Error</pre><!-- code-content -->
+4) No Error </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -398,6 +398,99 @@ finally</pre><!-- small-view -->
 catch
 finally</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
+                </article>
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+let document = "hello";
+console.log(document);
+
+1) Reference Error
+2) Syntax Errror
+3) Type Error
+4) No Error </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+Uncaught SyntaxError: 
+  redeclaration of non-configurable 
+  global property document </pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+Uncaught SyntaxError: 
+  redeclaration of non-configurable 
+  global property document</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+let function = "hello";
+console.log(document);
+
+1) Reference Error
+2) Syntax Errror
+3) Type Error
+4) No Error </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+Uncaught SyntaxError: 
+  unexpected token: 
+    keyword 'function'</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+Uncaught SyntaxError: 
+  unexpected token: 
+    keyword 'function'</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
+                </article>
+
+                <article>
+                    <h1 class="count">Code Example</h1>
+                    <details open><!--details CODE-->
+                        <summary class="details-code-summary">[JavaScript Inserts]</summary>
+                        <pre class="details-code-aclass">
+INSERT CODE THREE
+  </pre><!-- code-content -->
+                    </details><!--details CODE-->
+
+                    <br class="small-view">
+                    <br class="wide-view">
+
+                    <details open><!--Details CONSOLE -->
+                        <summary class="details-console-summary">
+                            [JavaScript Inserts]
+                        </summary>
+                        <pre class="details-console-aclass small-view">
+INSERT CONSOLE OUTPUT THREE (small view) 
+</pre><!-- small-view -->
+                        <pre class="details-console-aclass wide-view">
+INSERT CONSOLE OUTPUT THREE (wide view) 
+</pre><!-- wide-view -->
+                    </details><!--details CONSOLE -->
+
                 </article>
                 <!--here1-->
 
