update diagram in bom.html to include dialog boxesw

--- a/html/bom.html
+++ b/html/bom.html
@@ -84,6 +84,9 @@ window
   .name
   .opener
   .localstorage
+  .alert
+  .confirm
+  .prompt
                 &rarr; .history
                     .length
 
@@ -92,7 +95,7 @@ window
                     .appName
                     .appVersion
                  
-                &rarr; .screen
+                &rarr; .screen (schawa)
                     .height
                     .width
                     .availWidth
